--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "server-only": "^0.0.1"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^10.4.0",
+    "@cucumber/gherkin": "^28.0.0",
+    "@cucumber/messages": "^24.1.0",
+    "@swc-node/register": "^1.9.0",
     "@testing-library/jest-dom": "6.1.5",
     "@testing-library/react": "14.1.2",
     "@types/jest": "29.5.11",
