--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,7 @@ on:
       - '*'
 
 jobs:
-  test-unit-integration:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,11 +34,13 @@ jobs:
         run: yarn install
       - name: Run unit and integration tests
         run: npm run test:unit-integration-ci
+      - name: Run end-to-end tests
+        run: npm run test:e2e
       - name: Upload test results
         uses: actions/upload-artifact@v3
         if: success() || failure()
         with:
-          name: test-results-unit-integration
+          name: test-results
           path: test-results/
           retention-days: 7
           if-no-files-found: error
@@ -51,4 +53,5 @@ jobs:
           api-key: ${{ secrets.KETRYX_API_KEY }}
           version: KXVSN64PS91VS4R8S5TQR7VX0KZ8QM9
           build-name: ci
-          test-junit-path: test-results/junit.xml
+          test-junit-path: test-results/jest-junit.xml
+          test-cucumber-path: test-results/cucumber-report.json
