--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,10 +46,10 @@ jobs:
         uses: Ketryx/ketryx-github-action@v1
         if: fromJSON(env.SHOULD_DEPLOY) && (success() || failure())
         with:
-          ketryx-url: ${{ secrets.KETRYX_URL }}
-          project: ${{ secrets.KETRYX_PROJECT }}
+          ketryx-url: ${{ vars.KETRYX_URL }}
+          project: ${{ vars.KETRYX_PROJECT }}
           api-key: ${{ secrets.KETRYX_API_KEY }}
-          version: KXVSN64PS91VS4R8S5TQR7VX0KZ8QM9
+          version: ${{ vars.KETRYX_VERSION }}
           build-name: ci
           test-junit-path: test-results/jest-junit.xml
           test-cucumber-path: test-results/cucumber-report.json
