--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,8 +46,8 @@ jobs:
         uses: Ketryx/ketryx-github-action@v1
         if: fromJSON(env.SHOULD_DEPLOY) && (success() || failure())
         with:
-          ketryx-url: ${{ vars.KETRYX_URL }}
-          project: ${{ vars.KETRYX_PROJECT }}
+          ketryx-url: https://ketryx-miland.eu.ngrok.io
+          project: KXPRJ7AT2WY98B59Y5AHZW1KW0KZGQP
           api-key: ${{ secrets.KETRYX_API_KEY }}
           version: ${{ vars.KETRYX_VERSION }}
           build-name: ci
