--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,8 +44,8 @@ jobs:
         uses: Ketryx/ketryx-github-action@v1
         if: fromJSON(env.SHOULD_DEPLOY) && (success() || failure())
         with:
-          ketryx-url: ${{ secrets.KETRYX_URL }}
-          project: ${{ secrets.KETRYX_PROJECT }}
+          ketryx-url: ${{ vars.KETRYX_URL }}
+          project: ${{ vars.KETRYX_PROJECT }}
           api-key: ${{ secrets.KETRYX_API_KEY }}
           version: KXVSN5DZXZWQ4Q98JDV985BGF8H3D9R
           build-name: ci
